After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696291 - power: Don't look for screens if we don't have a lid
power: Don't look for screens if we don't have a lid
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: power
unspecified
Other All
: Normal normal
: ---
Assigned To: Richard Hughes
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2013-03-21 13:57 UTC by Bastien Nocera
Modified: 2013-04-17 14:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
power: Don't look for screens if we don't have a lid (3.50 KB, patch)
2013-03-21 13:57 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2013-03-21 13:57:22 UTC
Needs testing. But really, we shouldn't even be running timeouts
for this to work correctly.
Comment 1 Bastien Nocera 2013-03-21 13:57:24 UTC
Created attachment 239471 [details] [review]
power: Don't look for screens if we don't have a lid

We don't need to know about external screens being present when
we don't have any lid.
Comment 2 Matthias Clasen 2013-03-22 12:15:05 UTC
Does this fix any problem, or just a cleanup ?
Comment 3 Bastien Nocera 2013-03-22 12:20:44 UTC
Incomplete cleanup.
Comment 4 Bastien Nocera 2013-03-26 15:18:44 UTC
It's incomplete, so I'm targetting master with this.
Comment 5 Bastien Nocera 2013-04-16 14:03:13 UTC
Filed bug 698132 about the timeout itself.
Comment 6 Bastien Nocera 2013-04-17 14:10:35 UTC
Attachment 239471 [details] pushed as d491ebf - power: Don't look for screens if we don't have a lid