power: Don't look for screens if we don't have a lid

We don't need to know about external screens being present when
we don't have any lid.

https://bugzilla.gnome.org/show_bug.cgi?id=696291